--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 <script src="js/ng-cordova.min.js"></script>
 <script src="cordova.js"></script>
 <script src="js/app.js"></script>
+<script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
   </head>
   <body ng-app="starter">
 
