--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
 <script src="cordova.js"></script>
 <script src="js/app.js"></script>
 <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
+<script src="js/index.js"></script>
   </head>
   <body ng-app="starter">
 
@@ -38,6 +39,11 @@ Take Photo
 <button class="button button-full button-assertive" ng-click="choosePhoto()">
 Choose Photo
 </button>
+
+<button class="button button-full button-assertive" ng-click="choosePhoto()">
+Start Tesseract
+</button>
+
 <img ng-show="imgURI !== undefined" ng-src="{{imgURI}}" style="text-align: center">
 </ion-content>
 
