--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@ Take Photo
 Choose Photo
 </button>
 
-<button class="button button-full button-assertive" ng-click="choosePhoto()">
+<button class="button button-full button-assertive" ng-click="useTess()">
 Start Tesseract
 </button>
 
