--- a/www/index.html
+++ b/www/index.html
@@ -34,68 +34,9 @@
 </head>
 
 <body ng-app="starter" ng-controller="ListController">
-
-
-  <!-- <ion-nav-bar>
-    <ion-nav-buttons side="left">
-     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-    </ion-nav-buttons>
-  </ion-nav-bar>
-  <ion-nav-view>
-    Some text
-  </ion-nav-view>
-<ion-side-menus>
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Pocket Kitchen</h1>
-    </ion-header-bar>
-    <ion-content class="has-header">
-      <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Dashboard
-        </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Einkaufsliste
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
-</ion-side-menus> -->
-
-  <!-- <ion-side-menus>
-
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Pocket Kitchen</h1>
-    </ion-header-bar>
-    <ion-content class="has-header">
-      <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Dashboard
-        </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Einkaufsliste
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
-
-    <ion-nav-bar class="bar-light">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-
-    <ion-nav-view>
-    </ion-nav-view>
-  </ion-side-menus> -->
-
-
-
-
-
-
+  <!-- Last version -->
   <!-- linkes Menu-->
-  <ion-side-menus>
+  <!-- <ion-side-menus>
 
     <ion-side-menu side="left">
       <ion-header-bar class="bar-stable">
@@ -159,7 +100,14 @@
         </div>
 
     </ion-side-menu-content>
-  </ion-side-menus>
+  </ion-side-menus> -->
+
+  <ion-nav-bar class="bar-positive">
+     <ion-nav-back-button>
+     </ion-nav-back-button>
+   </ion-nav-bar>
+
+   <ion-nav-view></ion-nav-view>
 
 </body>
 </html>
