--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,9 @@
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <script src="https://cdn.jsdelivr.net/ngstorage/0.3.6/ngStorage.min.js"></script>
   <script src="js/ng-cordova.min.js"></script>
+
   <!-- cordova script (this will be a 404 during development) -->
   <!-- <script src="cordova.js"></script> -->
 
